--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,22 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Task Manager</title>
     <link rel="stylesheet" href="/css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Megrim" rel="stylesheet">
     <script async defer src="https://buttons.github.io/buttons.js"></script>
   </head>
   <body>
-    <div id="app"></div>
-    <script src="/js/components/vendor.js"></script>
-    <script src="/js/components/firstComp.js"></script>
+    <div id="home">
+      <div class="welcome-box">
+        <h1>Welcome to your task manager</h1>
+        <a href="all-tasks.html">
+          <div class="btn lightBlue">
+            Enter
+          </div>
+        </a>
+      </div>
+    </div>
   </body>
 </html>
